<resources>
    <string name="app_name">"My Calendar "</string>
    <string name="action_settings">Settings</string>
    <string name="action_language">Language</string>

    <string name="Sunday">Su</string>
    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>

    <string name="previous">Prev</string>
    <string name="next">Next</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="snack_bar_text_item_removed">1 item removed</string>
    <string name="snack_bar_action_undo">UNDO</string>

    <string name="event_item">Events Item</string>
    <string name="add_new_event">Add New Event</string>
    <string name="event_text">Event Text</string>
    <string name="enter_event_text">Enter Event Text</string>
    <string name="img_rec_item_desc">This is an img for event</string>

</resources>
