<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/rect_round">

        <ImageView
            android:id="@+id/imgEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/img_rec_item_desc" />

        <Button
            android:id="@+id/btnNewEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="43dp"
            android:background="#00fafafa"
            android:gravity="start|center_vertical"
            android:text="@string/add_new_event"
            android:textColor="#363636"
            android:textSize="14sp" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerAddEvents"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_weight="1" />

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp">

        <Button
            android:id="@+id/btnOk"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_round"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rect_round"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>